--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
+    "clsx": "^2.1.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
