--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@emotion/cache": "^11.14.0",
+    "@emotion/react": "^11.14.0",
     "@tailwindcss/vite": "^4.1.16",
     "clsx": "^2.1.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-frame-component": "^5.2.7",
     "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
@@ -37,6 +40,7 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "vitest": "^4.0.7"
   }
 }
