--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.14.0",
     "@tailwindcss/vite": "^4.1.16",
     "clsx": "^2.1.1",
+    "highlight.js": "^11.11.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
